# atak-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/atak_mcp/: __init__.py  bridge.py  cli.py  server.py  update.py
src/atak_mcp/bridge/: __init__.py  _adb.py  device.py  emulator.py  health.py  input.py  intents.py  maps.py  plugins.py  servers.py  ui.py
tests/: conftest.py  test_adb.py  test_cli.py  test_emulator_maps.py  test_flow.py  test_geometry.py  test_health.py  test_input_device.py  test_intents.py  test_logcat.py  test_network.py  test_scroll.py  test_server_mcp.py  test_servers.py  test_ui.py  test_update.py
