[project]
name = "atak-mcp"
version = "0.1.0"
description = "Drive ATAK (Android Team Awareness Kit) and its plugins over adb without blind taps: CLI + MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Newtype Industries" }]
keywords = ["atak", "tak", "adb", "android", "mcp", "uiautomator", "automation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]

# The MCP server needs `mcp`. The bridge and CLI themselves use only the standard
# library, so a single `uvx atak-mcp ...` call works out of the box too.
dependencies = ["mcp>=1.2.0"]

[project.scripts]
atak-mcp = "atak_mcp.cli:main"
atak-mcp-server = "atak_mcp.server:main"

[project.urls]
Homepage = "https://github.com/newtypeind/atak-mcp"
Repository = "https://github.com/newtypeind/atak-mcp"
Issues = "https://github.com/newtypeind/atak-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atak_mcp"]
